add dev composer.json for local testing

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,5 @@
 /phpcs.xml.dist export-ignore
 /phpunit.xml.dist export-ignore
 /phpstan.neon.dist export-ignore
+/dev export-ignore
 /tests export-ignore
