--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 		"php": ">=8.0",
 		"composer-plugin-api": "^2.0",
 		"shineunited/wordpress-installer": "^1.0",
-		"vlucas/phpdotenv": "^5.0"
+		"vlucas/phpdotenv": "^5.0",
+		"symfony/filesystem": "^6.0"
 	},
 	"require-dev": {
 		"shineunited/conductor-gitignore-addon": "*",
